--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@
 # Copy this file to .env.production and update with your actual backend URL
 
 # Backend API URL (update after deploying backend to Render)
-VITE_API_URL=https://your-backend-app.onrender.com
+VITE_API_URL=https://career-comapss-api-1.onrender.com
